--- a/index.html
+++ b/index.html
@@ -197,10 +197,10 @@
         <!-- single service -->
         <article class="service">
           <i class="fas fa-code service-icon"></i>
-          <h4>HTML5 & CSS3</h4>
+          <h4>VueJS & Vuetify</h4>
           <div class="underline"></div>
           <p>
-            Working with HTML5 and CSS3 to build and maintain the website interface. Managing CSS responsive frameworks including Bootstrap and Tailwind.
+            Working with Vuetify to build and maintain the website interface. Managing styles & components responsive VueJS frameworks.
           </p>
         </article>
         <!-- end of single service -->
