--- a/index.html
+++ b/index.html
@@ -240,16 +240,16 @@
       <!--end of section title -->
       <div class="section-center projects-center">
         <!-- single project -->
-        <a href="https://momosumochi2611.github.io/genshinbuild/" class="project-1">
+        <a href="https://momochill.herokuapp.com/" class="project-1">
           <article class="project">
             <img
-              src="./images/project-1.jpg"
-              alt="genshinbuild"
+              src="./images/project-1.png"
+              alt="momochill"
               class="project-img"
             />
             <div class="project-info">
-              <h4>GenshinBuild</h4>
-              <p>Front-End Web Using lightbox library JS</p>
+              <h4>MomoChill</h4>
+              <p>Movie NuxtJS App using TMDB API & Hab Streaming</p>
             </div>
           </article>
         </a>
