--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
             💬 Teach me about Javascript.
           </p>
           <p>
-            👯 Fun fact: I can work without you.
+            👯 Fun fact: I love cats.
           </p>
           <p>
             📫 Chat with me: <a href="https://twitter.com/Mhanhman26" target="_blank">Twitter</a>
