--- a/index.html
+++ b/index.html
@@ -341,9 +341,7 @@
         <article class="timeline-item">
           <h4>2022</h4>
           <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione
-            consequuntur voluptates tempore numquam? Quidem incidunt fugit quasi
-            autem, ea excepturi.
+            Third-year uni, learning new language C# & Java for .NET and android at school. Self-learn VueJS, Vuetify and NuxtJS to build some projects.
           </p>
           <span class="number">
             1
@@ -354,9 +352,7 @@
         <article class="timeline-item">
           <h4>2021</h4>
           <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione
-            consequuntur voluptates tempore numquam? Quidem incidunt fugit quasi
-            autem, ea excepturi.
+            Second-year uni, self-learn Javascript, a little HTML & CSS to build some front-end web projects.
           </p>
           <span class="number">
             2
@@ -367,9 +363,7 @@
         <article class="timeline-item">
           <h4>2020</h4>
           <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione
-            consequuntur voluptates tempore numquam? Quidem incidunt fugit quasi
-            autem, ea excepturi.
+            First-year uni, nothing special, trying to learn C++ at school and i don't spend much time to study (¬‿¬)
           </p>
           <span class="number">
             3
