--- a/index.html
+++ b/index.html
@@ -240,7 +240,7 @@
       <!--end of section title -->
       <div class="section-center projects-center">
         <!-- single project -->
-        <a href="https://momochill.herokuapp.com/" class="project-1">
+        <a href="https://momochill.herokuapp.com/" class="project-1" target="_blank">
           <article class="project">
             <img
               src="./images/project-1.png"
@@ -255,7 +255,7 @@
         </a>
         <!-- end of single project -->
         <!-- single project -->
-        <a href="https://momosumochi2611.github.io/mcsnew/" class="project-2">
+        <a href="https://momosumochi2611.github.io/mcsnew/" class="project-2" target="_blank">
           <article class="project">
             <img
               src="./images/project-2.png"
@@ -269,7 +269,7 @@
           </article>
         </a>
         <!-- end of single project --><!-- single project -->
-        <a href="https://vue-ip-search.vercel.app" class="project-3">
+        <a href="https://vue-ip-search.vercel.app" class="project-3" target="_blank">
           <article class="project">
             <img
               src="./images/project-3.png"
@@ -283,7 +283,7 @@
           </article>
         </a>
         <!-- end of single project --><!-- single project -->
-        <a href="https://momo-vue-app.herokuapp.com/" class="project-4">
+        <a href="https://momo-vue-app.herokuapp.com/" class="project-4" target="_blank">
           <article class="project">
             <img
               src="./images/project-4.png"
@@ -297,7 +297,7 @@
           </article>
         </a>
         <!-- end of single project --><!-- single project -->
-        <a href="https://momo-vue-app.herokuapp.com/" class="project-5">
+        <a href="https://momo-vue-app.herokuapp.com/" class="project-5" target="_blank">
           <article class="project">
             <img
               src="./images/project-5.png"
@@ -311,7 +311,7 @@
           </article>
         </a>
         <!-- end of single project --><!-- single project -->
-        <a href="https://momoblogs-21b8f.web.app/" class="project-6">
+        <a href="https://momoblogs-21b8f.web.app/" class="project-6" target="_blank">
           <article class="project">
             <img
               src="./images/project-6.png"
